fix multiple descriptions/notes

--- a/devops/scripts/benchmarks/html/index.html
+++ b/devops/scripts/benchmarks/html/index.html
@@ -192,6 +192,7 @@
             margin-bottom: 10px;
             border-radius: 5px;
             border-left: 4px solid #084298;
+            white-space: pre-line;
         }
         .benchmark-unstable {
             background-color: #f8d7da;
@@ -200,6 +201,7 @@
             margin-bottom: 10px;
             border-radius: 5px;
             border-left: 4px solid #842029;
+            white-space: pre-line;
         }
         .note-text {
             color: #084298;
