fix benchmark descriptions

--- a/devops/scripts/benchmarks/html/index.html
+++ b/devops/scripts/benchmarks/html/index.html
@@ -264,6 +264,16 @@
         .display-options input {
             margin-right: 8px;
         }
+        .benchmark-description {
+            background-color: #f2f2f2;
+            color: #333;
+            padding: 10px;
+            margin-bottom: 10px;
+            border-radius: 5px;
+            border-left: 4px solid #6c757d;
+            white-space: pre-line;
+            font-style: italic;
+        }
     </style>
 </head>
 <body>
